k8s/prod/solution-traffic-splitting-via-xlb-TODO-RENAME/store-v1.service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store
      version: v1
  template:
    metadata:
      labels:
        app: store
        version: v1
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.2.1
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store-v1
  annotations:
    networking.gke.io/max-rate-per-endpoint: "10"
    cloud.google.com/neg: '{"exposed_ports": {"8080":{"name": "store-v1-neg"}}}'
spec:
  selector:
    app: store
    version: v1
  ports:
  - port: 8080
