k8s/prod/solution-traffic-splitting-via-xlb-TODO-RENAME/bifid-external-store-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: bifid-external-store-http
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
